src/test/ui/consts/const-unsized.stderr
error[E0277]: the size for values of type `(dyn Debug + Sync + 'static)` cannot be known at compilation time
  --> $DIR/const-unsized.rs:3:16
   |
LL | const CONST_0: dyn Debug + Sync = *(&0 as &(dyn Debug + Sync));
   |                ^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Debug + Sync + 'static)`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/const-unsized.rs:6:18
   |
LL | const CONST_FOO: str = *"foo";
   |                  ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`

error[E0277]: the size for values of type `(dyn Debug + Sync + 'static)` cannot be known at compilation time
  --> $DIR/const-unsized.rs:9:18
   |
LL | static STATIC_1: dyn Debug + Sync = *(&1 as &(dyn Debug + Sync));
   |                  ^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Debug + Sync + 'static)`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/const-unsized.rs:12:20
   |
LL | static STATIC_BAR: str = *"bar";
   |                    ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
